--- a/src/App.css
+++ b/src/App.css
@@ -3,27 +3,72 @@
 }
 
 .App-logo {
-    height: 40vmin;
+    /*height: 40vmin;*/
+    width: 100%;
+    top: 0;
     pointer-events: none;
+
+}
+
+.background-container {
+    display: flex;
+    width: 100%;
+    height: 40vmin;
+    overflow: hidden;
+}
+
+.background-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 75%;
 }
 
 .App-header {
     background-color: #282c34;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
 }
 
-nav {
-    margin: 20px;
+h1 {
+    margin-top: 4rem;
 }
 
-a {
-    color: white;
-    margin: 10px;
-    text-decoration: none;
+.nav-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center the cards horizontally */
+    padding: 30px;
+}
+
+
+.card {
+    width: calc(50% - 60px); /* Adjusting the width calculation to allow for increased margin */
+    box-sizing: border-box;
+    margin: 30px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+
+.card img {
+    max-width: 100%;
+    height: auto; /* Maintain aspect ratio */
+}
+
+/* Mobile view: one card per row */
+@media (max-width: 768px) {
+    .card {
+        width: 100%;
+    }
 }
