--- a/src/Restaurant.css
+++ b/src/Restaurant.css
@@ -22,11 +22,46 @@
 
 .card-content a {
     display: block;
-    margin-top: 10px; /* Spacing between the preview text and link */
     color: #007bff; /* Basic link color, feel free to change */
     text-decoration: none; /* Remove underlines */
+    white-space: normal;
+    word-wrap: anywhere;
+    overflow-wrap: anywhere;
 }
 
 .card-content a:hover {
     text-decoration: underline; /* Underline on hover for better UX */
+}
+
+.nav-back {
+    position: relative;
+    width: 100%;
+    height: 10vmin;
+    overflow: hidden;
+}
+
+.nav-back img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 75%;
+}
+
+.nav-back .arrow {
+    display: none; /* Initially hide the arrow */
+    position: absolute; /* Position the arrow inside the nav-back div */
+    top: 50%; /* Center vertically */
+    left: 50px; /* Center horizontally */
+    width: 80px; /* Width of the arrow */
+    height: 40px; /* Height of the arrow */
+    background-image: url('/public/arrow.png'); /* Path to your arrow image */
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: translate(-50%, -50%); /* Center the div within its container */
+    opacity: 0.5; /* Semi-transparent */
+}
+
+.nav-back:hover .arrow {
+    display: block; /* Show the arrow on hover */
 }
