--- a/src/Restaurant.css
+++ b/src/Restaurant.css
@@ -3,6 +3,8 @@
     margin: 20px auto; /* Center the card */
     display: flex; /* Enable flex layout for the card */
     border: 1px solid #ccc; /* Optional border */
+    max-height: 20vmin;
+    max-width: 560px;
 }
 
 .card-image {
@@ -64,4 +66,19 @@
 
 .nav-back:hover .arrow {
     display: block; /* Show the arrow on hover */
+}
+
+.embed-container {
+    margin: 2vh auto;
+    width: 100%;
+    max-width: 1080px;
+    height: 100vh;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+@media (max-width: 768px) {
+    .embed-container {
+        height: 75vh;
+    }
 }
